<resources>
    <string name="app_name">AndroidResume</string>

    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>

    <string name="section_education">Education</string>
    <string name="section_project">Project</string>
    <string name="section_work_experience">Work Experience</string>

    <string name="add_education">Add education</string>
    <string name="add_project">Add project</string>
    <string name="add_work_experience">Add work experience</string>
    <string name="edit_basic_info">Edit Basic Info</string>
    <string name="edit_education">Edit education</string>
    <string name="edit_work_experience">Edit Work Experience</string>
    <string name="edit_project">Edit Project</string>

    <string name="user_picture">User picture</string>
    <string name="choose_user_picture">Choose user picture</string>
    <string name="basic_info_edit_email_hint">Your Email</string>
    <string name="basic_info_edit_name_hint">Your Name</string>
    <string name="basic_info_edit_personal_site_hint">Personal Site</string>

    <string name="start_date">Start date (MM/YYYY)</string>
    <string name="end_date">End date (MM/YYYY)</string>

    <string name="education_edit_school_hint">Institution name</string>
    <string name="education_edit_degree_hint">Degree</string>
    <string name="education_edit_courses_hint">Courses</string>

    <string name="work_experience_edit_company_name_hint">Company Name</string>
    <string name="work_experience_edit_job_title_hint">Job Title</string>
    <string name="work_experience_edit_job_description_hint">Job Description</string>

    <string name="project_edit_project_name_hint">Project name</string>
    <string name="project_edit_project_details_hint">Project details</string>

</resources>
