<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_work_experience_company_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_experience_edit_company_name_hint"/>

    <EditText
        android:id="@+id/et_work_experience_job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_experience_edit_job_title_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_work_experience_edit_start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/start_date"/>

        <EditText
            android:id="@+id/et_work_experience_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:hint="@string/end_date"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_work_experience_job_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_experience_edit_job_description_hint"/>

    <TextView
        android:id="@+id/tv_work_experience_edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_gravity="end"
        android:text="@string/action_delete"
        style="@style/AppTheme.TextView.DeleteButton" />


</LinearLayout>