<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_basic_info_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/basic_info_edit_name_hint"
                android:layout_toLeftOf="@id/fl_basic_info_edit_image"/>
            <EditText
                android:id="@+id/et_basic_info_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/basic_info_edit_email_hint"/>
            <EditText
                android:id="@+id/et_basic_info_personal_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/basic_info_edit_personal_site_hint"/>
        </LinearLayout>

        <!--<ImageButton-->
            <!--android:id="@+id/ib_edit_basic_info_user_picture"-->
            <!--android:layout_width="@dimen/basic_info_edit_user_picture_size"-->
            <!--android:layout_height="@dimen/basic_info_edit_user_picture_size"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:src="@drawable/ic_account_circle_white_48dp"-->
            <!--/>-->
        <FrameLayout
            android:id="@+id/fl_basic_info_edit_image"
            android:layout_width="@dimen/basic_info_edit_user_picture_background_width"
            android:layout_height="@dimen/basic_info_edit_user_picture_background_height"
            android:background="?attr/selectableItemBackground">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/user_picture_selector_background"/>

            <ImageView
                android:id="@+id/basic_info_edit_image"
                android:layout_width="@dimen/basic_info_edit_user_picture_background_height"
                android:layout_height="match_parent"
                android:src="@drawable/ic_account_circle_white_48dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:contentDescription="@string/choose_user_picture"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:src="@drawable/ic_photo_camera_white_24dp"
                android:contentDescription="@null"/>

        </FrameLayout>



    </LinearLayout>



</LinearLayout>