<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rray.me.androidresume.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/ib_edit_user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_text_size"
                    android:textStyle="bold"
                    tools:text="Your Name" />

                <ImageButton
                    android:id="@+id/ib_edit_basic_info_btn"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="@dimen/spacing_xsmall"
                    android:src="@drawable/ic_mode_edit_black_18dp"
                    android:background="?attr/selectableItemBackground"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_personal_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/ib_edit_user_picture"
                android:layout_below="@+id/ll_user_name_layout"
                tools:text="personal.site"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/ib_edit_user_picture"
                android:layout_below="@+id/tv_personal_site"
                tools:text="your email"/>

            <!--<TextView-->
                <!--android:id="@+id/tv_phone_number"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_toLeftOf="@+id/ib_edit_user_picture"-->
                <!--android:layout_below="@+id/tv_email"-->
                <!--android:text="(123) 456-7890"/>-->


            <ImageButton
                android:id="@+id/ib_edit_user_picture"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_account_circle_white_48dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:id="@+id/tv_section_education"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:text="@string/section_education"/>

            <ImageButton
                android:id="@+id/ib_add_education_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_education_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:id="@+id/tv_section_work_experience"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:text="@string/section_work_experience"/>

            <ImageButton
                android:id="@+id/ib_add_work_experience_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/user_picture"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_work_experience_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_small">

            <TextView
                android:id="@+id/tv_section_project"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                android:text="@string/section_project"/>

            <ImageButton
                android:id="@+id/ib_add_project_btn"
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:layout_marginRight="@dimen/spacing_xsmall"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/user_picture"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_project_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>

</ScrollView>

